Remarks regarding Precision and Recall

--- a/eng-ai-agents/assignments/assignment-1/02-assignment-1b.ipynb
+++ b/eng-ai-agents/assignments/assignment-1/02-assignment-1b.ipynb
@@ -878,6 +878,14 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Remarks:-\n",
+    "Precision is the ratio of correctly predicted positive observations to the total predicted positives. It measures the accuracy of the positive predictions. Recall is the ratio of correctly predicted positive observations to all actual positives. As we can see, higher precision means lower recall and vice versa. With higher precision, most of the predicted positives are true positives but this might include more false negatives. Hence, there is an inverse relation between Precision and Recall which can be visualised in the graph above."
+   ]
   }
  ],
  "metadata": {
